react from scratch

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 </head>
 <body>
     
+
+    <!-- react -->
+    <div id="root"></div>
+    <!-- react -->
+
     <script src="./dist/bundle.js"></script>
 </body>
 </html>
