--- a/public/index.html
+++ b/public/index.html
@@ -13,12 +13,12 @@
     <!-- React js code injected point -->
     <div id="app"></div>
 
-    
+
     <!-- Compiled react code -->
     <script src="dist/bundle.js"></script>
     <!-- Browsersync functionality -->
     <script id="__bs_script__">
-        document.write("<script async src='http://HOST:3000/browser-sync/browser-sync-client.js?v=2.24.6'><\/script>".replace("HOST", location.hostname));
+        // document.write("<script async src='http://HOST:3000/browser-sync/browser-sync-client.js?v=2.24.6'><\/script>".replace("HOST", location.hostname));
     </script>
 </body>
 
