--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -27,6 +27,12 @@
         <div class="myDiv" id="green"></div>
         <hr>
         <div class="myDiv bg-primary"></div>
+        <div class="myDiv bg-danger"></div>
+        <div class="myDiv bg-warning"></div>
+        <div class="myDiv bg-info"></div>
+        <div class="myDiv bg-light"></div>
+        <div class="myDiv bg-dark"></div>
+        <div class="myDiv bg-white"></div>
 
     </div>
 
