--- a/Bootstrap/colors.html
+++ b/Bootstrap/colors.html
@@ -11,7 +11,7 @@
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
     <link rel="stylesheet" href="./main.css">
-    <title>Containers and rows</title>
+    <title>Hello, world!</title>
 </head>
 
 <body>
@@ -22,19 +22,17 @@
     <div id="app"></div>
 
 
-
-    <div class="myDiv" id="red"></div>
-    <div class="myDiv" id="green"></div>
-    <hr>
-    <div class="myDiv bg-primary"></div>
-    <div class="myDiv bg-danger"></div>
-    <div class="myDiv bg-warning"></div>
-    <div class="myDiv bg-info"></div>
-    <div class="myDiv bg-light"></div>
-    <div class="myDiv bg-dark"></div>
-    <div class="myDiv bg-white"></div>
-    <div class="container">
+    <div>
+        <div class="myDiv" id="red"></div>
+        <div class="myDiv" id="green"></div>
+        <hr>
         <div class="myDiv bg-primary"></div>
+        <div class="myDiv bg-danger"></div>
+        <div class="myDiv bg-warning"></div>
+        <div class="myDiv bg-info"></div>
+        <div class="myDiv bg-light"></div>
+        <div class="myDiv bg-dark"></div>
+        <div class="myDiv bg-white"></div>
 
     </div>
 
