--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -26,13 +26,16 @@
     <div class="myDiv" id="red"></div>
     <div class="myDiv" id="green"></div>
     <hr>
-    <div class="myDiv bg-primary"></div>
-    <div class="myDiv bg-danger"></div>
-    <div class="myDiv bg-warning"></div>
-    <div class="myDiv bg-info"></div>
-    <div class="myDiv bg-light"></div>
-    <div class="myDiv bg-dark"></div>
-    <div class="myDiv bg-white"></div>
+    <div class="container-fluid">
+
+        <div class="myDiv bg-primary"></div>
+        <div class="myDiv bg-danger"></div>
+        <div class="myDiv bg-warning"></div>
+        <div class="myDiv bg-info"></div>
+        <div class="myDiv bg-light"></div>
+        <div class="myDiv bg-dark"></div>
+        <div class="myDiv bg-white"></div>
+    </div>
     <div class="container">
         <div class="myDiv bg-primary"></div>
 
