POWERFUL! Bootstrap - you can achieve a lot with it!

--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -23,22 +23,70 @@
 
 
 
-    <div class="myDiv" id="red"></div>
-    <div class="myDiv" id="green"></div>
-    <hr>
-    <div class="container-fluid">
+    <!-- <div class="myDiv" id="red"></div> -->
+    <!-- <div class="myDiv" id="green"></div> -->
 
+
+
+
+
+
+
+
+<div class="container-fluid">
+    <div class="row mt-5">
+        <div class="col-4">
+            <div class="list-group mb-5" id="list-tab">
+                <a class="list-group-item list-group-item-action" href="#list-c1" data-toggle="list">Link First</a>
+                <a class="list-group-item list-group-item-action" href="#list-c2" data-toggle="list">Link Second</a>
+                <a class="list-group-item list-group-item-action" href="#list-c2" data-toggle="list">Link Third</a>
+                <a class="list-group-item list-group-item-action" href="#list-c2" data-toggle="list">Link Fourth</a>
+            </div>
+            <div class="col-8">
+                <div class="tab-content" id="nav-tabContent">
+                    <div role="tabpanel" id="list-c1" class="tab-pane fade">First Content</div>
+                    <div role="tabpanel" id="list-c2" class="tab-pane fade">Second Content</div>
+                    <div role="tabpanel" id="list-c3" class="tab-pane fade">Third Content</div>
+                    <div role="tabpanel" id="list-c4" class="tab-pane fade">Fourth Content</div>
+
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+        <!-- 
         <div class="myDiv bg-primary"></div>
         <div class="myDiv bg-danger"></div>
         <div class="myDiv bg-warning"></div>
         <div class="myDiv bg-info"></div>
         <div class="myDiv bg-light"></div>
         <div class="myDiv bg-dark"></div>
-        <div class="myDiv bg-white"></div>
+        <div class="myDiv bg-white"></div> -->
     </div>
     <div class="container">
-        <div class="myDiv bg-primary"></div>
-
+        <!-- <div class="myDiv bg-primary"></div> -->
+    </div>
+    <div class="container">
+        <div class="row">
+            <!-- <div class="myRow bg-success"></div> -->
+        </div>
     </div>
 
 
