classes! Bootstrap POWERFUL

--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -27,30 +27,47 @@
     <!-- <div class="myDiv" id="green"></div> -->
 
 
-
-
-
-
-
-
 <div class="container-fluid">
-    <div class="row mt-5">
+
+
+
+
+
+
+
+
+
+
+    <div class="row">
         <div class="col-4">
+            <div class="list-group">
+                <a class="list-group-item list-group-item-action" href="#list-c1" data-toggle="list">Link First</a>
+                <a class="list-group-item list-group-item-action" href="#list-c2" data-toggle="list">Link Second</a>
+            </div>
+        </div>
+        <div class="col-8">
+            <div class="nav-content">
+                <div role="tabpanel" id="list-c1" class="tab-pane fade">First Content</div>
+                <div role="tabpanel" id="list-c2" class="tab-pane fade">Second Content</div>
+            </div>
+        </div>
+    </div>
+
+    <div class="row mt-5">
+        <div class="col-3">
             <div class="list-group mb-5" id="list-tab">
                 <a class="list-group-item list-group-item-action" href="#list-c1" data-toggle="list">Link First</a>
                 <a class="list-group-item list-group-item-action" href="#list-c2" data-toggle="list">Link Second</a>
                 <a class="list-group-item list-group-item-action" href="#list-c2" data-toggle="list">Link Third</a>
                 <a class="list-group-item list-group-item-action" href="#list-c2" data-toggle="list">Link Fourth</a>
             </div>
-            <div class="col-8">
+            <div class="col-7">
                 <div class="tab-content" id="nav-tabContent">
                     <div role="tabpanel" id="list-c1" class="tab-pane fade">First Content</div>
                     <div role="tabpanel" id="list-c2" class="tab-pane fade">Second Content</div>
                     <div role="tabpanel" id="list-c3" class="tab-pane fade">Third Content</div>
                     <div role="tabpanel" id="list-c4" class="tab-pane fade">Fourth Content</div>
-
                 </div>
-
             </div>
         </div>
     </div>
